--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
   flutter_facebook_auth: ^4.4.1
+  fluttertoast: ^8.2.4
+  maps_launcher: ^2.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
