logo + splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,16 @@ dependencies:
   flutter_facebook_auth: ^4.4.1
   fluttertoast: ^8.2.4
   maps_launcher: ^2.2.0
+  flutter_native_splash: ^2.2.18
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/imgs/ps_logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
