--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,12 +1,12 @@
 flutter_native_splash:
   color: "#e1f5fe"
-  background_image: assets/imgs/logo_patsoft.jpg
+  background_image: assets/imgs/ps_logo.png
   color_dark: "#eeeeee"
   android: true
   ios: true
   # image_dark: assets/logo_lockup_flutter_vertical_wht.png
   android_12:
-    image: assets/imgs/logo_patsoft.jpg
+    image: assets/imgs/ps_logo.png
     # color: "#42a5f5"
     # icon_background_color: "#eeeeee"
   fullscreen: true
