--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   fluttertoast: ^8.2.4
   maps_launcher: ^2.2.0
   flutter_native_splash: ^2.2.18
+  animated_splash_screen: ^1.3.0
+  animated_text_kit: ^4.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
